--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,24 +12,21 @@ font-weight: 600;
 	text-align: center;
 	background: #78909C;
 	width: 75%;
-	margin-left: 10rem;
-	float:left;
+	margin-left: auto;
+	margin-right: auto;
 }
 /* Fin cabecera */
 .container{
 	width: 75%;
-	float:left;
 	text-align: center;
 	background-color: #FFFFFF;
-	margin-left: 10rem;
-	margin-right: 10rem;
+	margin-left: auto;
+	margin-right: auto;
 }
 /* MENU */
 .navbar {
-  width: 75%;
   background-color: #555;
   overflow: auto;
-	margin-left: 10rem;
 }
 
 /* MENU - links */
@@ -55,32 +52,31 @@ font-family: 'Roboto', sans-serif;
 }
 
 /* MENU Magia responsive  */
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-}
+
 .content{
-	padding: 15px;
+	padding: 0px;
 }
 /* Menu pegado */
 .static {
   position: fixed;
   top: 0;
-  width: 75%;
+  /*width: 75%;*/
 }
 
 .static + .content {
   padding-top: 50px;
 }
 /* FORMULARIO */
+.my-3{
+	margin-bottom:24px;
+	margin-top:24px;
+}
 label {
     display:block;
     margin-top:20px;
 	text-align: left;
     letter-spacing:1px;
-	font-size: 25px;
+	font-size: 16px;
 }
 .formulario {
     display:block;
@@ -97,8 +93,8 @@ form {
 input, textarea {
     width:380px;
     height:27px;
-    background:rgba(47,79,79,1.00);
-    border:2px solid #f6f6f6;
+    background:#FFF;
+    border:2px solid violet;
     padding:10px;
     margin-top:5px;
     color:white;
@@ -121,4 +117,28 @@ textarea {
 }
 .footer{
 	
+}
+@media screen and (min-width: 767px) {
+.static {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+}
+
+@media screen and (max-width: 360px) {
+  .navbar a {
+    float: none;
+    display: block;
+  }
+	.navbar{
+		margin: auto;
+	}
+	.static{
+		width: 100%;
+	}
+	body{
+		margin-left: 0px;
+		margin-right: 0px;
+	}
 }
