--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,101 +1,202 @@
 @charset "utf-8";
 /* CSS Document */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
+}
+
 body{
-	background: #263238;
-	font-family:'Roboto', sans-serif;
+    background: #263238;
+    background: #000 url('../images/fondo.jpg');
+    background-size: cover;
+    background-attachment: fixed; 
+    font-family:'Roboto', sans-serif;
 }
 h1{
-font-weight: 600;
+    font-weight: 600;
 }
 /* Cabecera */
 .header{
-	text-align: center;
-	background: #78909C;
-	padding: 30px;
-	margin-left: auto;
-	margin-right: auto;
+    text-align: center;
+    background: #78909C;
+    padding: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* Fin cabecera */
 .container{
-	width: 75%;
-	text-align: center;
-	background-color: #FFFFFF;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: auto;
+    width: 75%;
+    text-align: center;
+    background-color: #FFFFFF;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: auto;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 .left{
-	text-align: left;
+    text-align: left;
 }
 /* MENU */
 .navbar {
-  background-color: #555;
-  overflow: auto;
-	margin: auto;
-	z-index: 3;
+    background-color: #555;
+    overflow: auto;
+    margin: auto;
+    z-index: 3;
 }
 
 /* MENU - links */
 .navbar a {
-  float: left;
-  text-align: center;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-font-family: 'Roboto', sans-serif;
-	font-weight: 100;
+    float: left;
+    text-align: center;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 /* MENU - links con mouse encima*/
 .navbar a:hover {
-  background-color: #000;
+    background-color: #000;
 }
 
 /* MENU - Activo */
 .active {
-  background-color: dodgerblue;
+    background-color: dodgerblue;
 }
 
 /* MENU Magia responsive  */
 
 .content{
-	padding: 10px;
+    padding: 10px;
 }
 /* Menu pegado */
 .static {
-  position: fixed;
-  top: 0;
-  left: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .static + .content {
-  padding-top: 0px;
+    padding-top: 0px;
 }
+
+/* Inicio de la pagína*/
+header{
+    width: 100%;
+}
+
+.contenedor-principal{
+    margin:auto;
+    width: 90%;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.main{
+    background: #fff;
+    padding: 20px;
+    width: 70%;
+}
+.main .articulo{
+    padding: 20px;
+    margin: 20px;
+}
+.main .articulo .portada{
+    margin-bottom: 20px;
+}
+.main .articulo .portada img{
+    width: 100%;
+    vertical-align: top;
+}
+.main .articulo h2{
+    margin-bottom: 20px;
+    font-weight: normal;
+    font-size: 32px;
+}
+.main .articulo p{
+    margin-bottom: 20px;
+    font-size :15px;
+    line-height: 22px;
+}
+aside {
+    width: 30%;
+    /*background: #000;*/
+    
+}
+aside .contenedor-comics{
+    padding: 22px;
+    background: #000;
+}
+aside h2{
+    color:#fff;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+aside .aside-articulo{
+}
+aside .aside-articulo .novedad{
+    margin-bottom: 0;
+}
+aside .aside-articulo .novedad img{
+    width: 100%;
+    vertical-align: top;
+    opacity: 0.7;
+}
+aside .aside-articulo .novedad img:hover{
+    opacity: 1;
+}
+/*Inicio de footer*/
+footer{
+    width: 100%;
+    padding: 20px;
+    background: #2f2f2f;
+    color: #fff;
+}
+footer .autores{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+footer p{
+    text-align: center;
+}
+/*Fin de footer*/
+/*Fin inicio de pagína*/
 /* FORMULARIO */
 .my-3{
-	margin-bottom:24px;
-	margin-top:24px;
+    margin-bottom:24px;
+    margin-top:24px;
 }
 label {
     display:block;
     margin-top:20px;
-	text-align: left;
+    text-align: left;
     letter-spacing:1px;
-	font-size: 16px;
+    font-size: 16px;
 }
 .formulario {
     display:block;
     margin:0 auto;
     width:510px;
     color: darkslategray;
-    
+
 }
 form {
     margin:0 auto;
     width:400px;
 }
- 
+
 input, textarea {
     width:380px;
     height:27px;
@@ -105,201 +206,229 @@ input, textarea {
     margin-top:5px;
     color:white;
 }
- 
+
 textarea {
     height:150px;
 }
- 
+
 #submit {
     width:85px;
     height:35px;
     border:none;
     margin-top:20px;
     cursor:pointer;
-	margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 .error{
-	border:medium solid red;
+    border:medium solid red;
 }
 .footer{
-	
+
 }
 
 /* Slides */
+.slides_contenedor .titulo{
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
 .rslides {
-  margin: 0 auto 40px;
-  }
-
+    margin: 0 auto 40px;
+}
+.centrar{
+    display: flex;
+    justify-content: center;
+}
 .slides_container {
-  margin-bottom: 50px;
-  position: relative;
-  float: left;
-  width: auto;
-  }
-
+    margin-bottom: 50px;
+    position: relative;
+    float: left;
+    width: auto;
+}
 .slides {
-  position: relative;
-  list-style: none;
-  overflow: hidden;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  }
+    position: relative;
+    list-style: none;
+    overflow: hidden;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 .slides li {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: 0;
-  }
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
 
 .slides img {
-  display: block;
-  position: relative;
-  z-index: 1;
-  height: auto;
-  width: 100%;
-  border: 0;
-  }
+    display: block;
+    position: relative;
+    z-index: 1;
+    height: auto;
+    width: 100%;
+    border: 0;
+}
 
 .slides .texto {
-  display: block;
-  position: absolute;
-  z-index: 2;
-  font-size: 20px;
-  text-shadow: none;
-  color: #fff;
-  background: #000;
-  background: rgba(0,0,0, .8);
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding: 10px 20px;
-  margin: 0;
-  max-width: none;
-  }
+    display: block;
+    position: absolute;
+    z-index: 2;
+    font-size: 20px;
+    text-shadow: none;
+    color: #fff;
+    background: #000;
+    background: rgba(0,0,0, .8);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 10px 20px;
+    margin: 0;
+    max-width: none;
+}
 
 .slides_nav {
-  position: absolute;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  top: 57%;
-  left: 0;
-  opacity: 0.7;
-  z-index: 2;
-  text-indent: -9999px;
-  overflow: hidden;
-  text-decoration: none;
-  height: 61px;
-  width: 38px;
-  background: transparent url(../images/themes.gif)no-repeat left top;
-  margin-top: -150px;
-  }
+    position: absolute;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    top: 57%;
+    left: 0;
+    opacity: 0.7;
+    z-index: 2;
+    text-indent: -9999px;
+    overflow: hidden;
+    text-decoration: none;
+    height: 61px;
+    width: 38px;
+    background: transparent url(../images/themes.gif)no-repeat left top;
+    margin-top: -150px;
+}
 
 .slides_nav:active {
-  opacity: 1.0;
-  }
+    opacity: 1.0;
+}
 
 .slides_nav.next {
-  left: auto;
-  background-position: right top;
-  right: 0;
-  }
+    left: auto;
+    background-position: right top;
+    right: 0;
+}
 
 #lista a {
-  display: inline-block;
+    display: inline-block;
 }
 
 #lista img {
-  float: left;
+    float: left;
 }
 
 #lista .rslides_here a {
-  background: transparent;
-  box-shadow: 0 0 0 2px #666;
+    background: transparent;
+    box-shadow: 0 0 0 2px #666;
 }
 
 #lista a {
-  padding: 0;
+    padding: 0;
 }
 
 .rslides_tabs {
-  list-style: none;
-  padding: 0;
-  background: rgba(0,0,0,.25);
-  box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  -moz-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
-  font-size: 18px;
-  list-style: none;
-  margin: 0 auto 50px;
-  max-width: 540px;
-  padding: 10px 0;
-  text-align: center;
-  width: 100%;
-  }
+    list-style: none;
+    padding: 0;
+    background: rgba(0,0,0,.25);
+    box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
+    -moz-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.3), inset 0 0 5px rgba(0,0,0,1.0);
+    font-size: 18px;
+    list-style: none;
+    margin: 0 auto 50px;
+    max-width: 540px;
+    padding: 10px 0;
+    text-align: center;
+    width: 100%;
+}
 
 .rslides_tabs li {
-  display: inline;
-  float: none;
-  margin-right: 1px;
-  }
+    display: inline;
+    float: none;
+    margin-right: 1px;
+}
 
 .rslides_tabs a {
-  width: auto;
-  line-height: 20px;
-  padding: 9px 20px;
-  height: auto;
-  background: transparent;
-  display: inline;
-  }
+    width: auto;
+    line-height: 20px;
+    padding: 9px 20px;
+    height: auto;
+    background: transparent;
+    display: inline;
+}
 
 .rslides_tabs li:first-child {
-  margin-left: 0;
-  }
+    margin-left: 0;
+}
 
 .rslides_tabs .rslides_here a {
-  background: rgba(255,255,255,.1);
-  color: #fff;
-  font-weight: bold;
-  }
+    background: rgba(255,255,255,.1);
+    color: #fff;
+    font-weight: bold;
+}
 
 @media screen and (min-width: 767px) {
-.static {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
+    .static {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
 }
 @media screen and (min-width: 360px) {
-.static {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
+    .static {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+
 }
 @media screen and (max-width: 360px) {
-  .navbar a {
-    float: none;
-    display: block;
-  }
-	.navbar{
-		margin: auto;
-	}
-	.static{
-		width: 100%;
-	}
-	body{
-		margin-left: 0px;
-		margin-right: 0px;
-	}
+    .navbar a {
+        float: none;
+        display: block;
+    }
+    .navbar{
+        margin: auto;
+    }
+    .static{
+        width: 100%;
+    }
+    body{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .callbacks_nav {
-    top: 47%;
-	}
-	.static{
-		width: 100%;
-	}
-  }
+    .callbacks_nav {
+        top: 47%;
+    }
+    .static{
+        width: 100%;
+    }
+}
+@media (max-width: 575.98px) {}
+@media (max-width: 767.98px) {
+    .main {
+        width: 100%;
+        padding:0;
+    }
+    .main p{
+        text-align: center;
+    }
+    aside{
+        width: 100%;
+        flex-direction: row;
+    }
 
+}
+
+@media (max-width: 991.98px) {}
+
+@media (max-width: 1199.98px) {}
