--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @font-face {
-	font-family: comic-ink;
-	src: url(../fonts/Comic-ink.otf);
+    font-family: comic-ink;
+    src: url(../fonts/Comic-ink.otf);
 }
 /* CSS Document */
 *{
@@ -13,8 +13,12 @@
 
 }
 .titulo {
-	font-family: comic-ink;
-	font-size: 300%;
+    font-family: comic-ink;
+    font-size: 300%;	
+}
+.descripcion{
+    font-family: comic-ink;
+    padding-top: 20px;
 }
 body{
     background: #263238;
@@ -23,21 +27,18 @@ body{
     background-attachment: fixed; 
     font-family:'Roboto', sans-serif;
 }
-
 h1{
     font-weight: 600;
 }
-
 /* Cabecera */
 .header{
     text-align: center;
-    background: #78909C;
+    background: rgba(187,105,1,1.00);
     padding: 30px;
     margin-left: auto;
     margin-right: auto;
 }
 /* Fin cabecera */
-
 .container{
     width: 75%;
     text-align: center;
@@ -47,12 +48,10 @@ h1{
     z-index: auto;
     padding-right: 15px;
     padding-left: 15px;
-
 }
 .left{
     text-align: left;
 }
-
 /* MENU */
 .navbar {
     background-color: #555;
@@ -117,17 +116,101 @@ header{
     padding: 20px;
     width: 70%;
 }
+.about{
+    background: #fff;
+    padding: 26px;
+    width: 100%;
+}
+/* Contenedor de About */
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/* ESTILOS PARA CARDS */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 30%;
+    text-align: center;
+}
+
+.title {
+    color: grey;
+    font-size: 18px;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+}
+.resenia{
+    background: #fff;
+    padding: 20px;
+    width: 100%;
+    font-weight: 200;
+    text-indent: 2em;
+    text-align: justify;
+}
+.img-resenia{
+    float: right;
+    width: 50%;
+    height: auto;
+    padding: 15px;
+}
+.titulo-2{
+    border-bottom: dotted grey thin;
+    padding-bottom: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+}
 .main .articulo{
     padding: 20px;
     margin: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .main .articulo .portada{
     margin-bottom: 20px;
+    width: 40%;
+    /*    padding: 20px;*/
+
 }
+/*contenido*/
+.main .articulo .contenido{
+    width: 60%;
+    padding: 20px;
+}
+.fa-circle{
+    color:#22f672;
+}
+.main .articulo .contenido .titulo-portada{
+    margin-bottom: 0px;
+}
+.main .articulo .contenido .titulo-secundario{
+    margin-bottom: 16px;
+}
+.main .articulo .contenido .generos{
+    margin-bottom: 16px;
+}
+.main .articulo .contenido .texto h3{
+    margin-bottom: 12px;
+}
+/*fin contenido*/
 .main .articulo .portada img{
     width: 100%;
     vertical-align: top;
 }
+
 .main .articulo h2{
     margin-bottom: 20px;
     font-weight: normal;
@@ -138,14 +221,80 @@ header{
     font-size :15px;
     line-height: 22px;
 }
+
+/*articulos*/
+.main .articulos{
+    width: 100%;
+    background: rgba(255,255,255,0.7);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.main .articulos article{
+    width: 30%;
+}
+.main .articulos article h2{
+    font-size: 16px;
+    text-align: center;
+}
+.main .articulos article img{
+    width: 100%;
+    vertical-align: top;
+    opacity: 0.7;
+
+}
+.main .articulos article img{
+    opacity: 1;
+}
+
+.divisor{
+    margin-bottom: 20px;
+    border-color: grey;
+}
+/*fin de articulos*/
 aside {
     width: 30%;
     /*background: #000;*/
+}
+aside .busqueda-comics{
+    margin-top: 30px;
+    background: #000;
+    padding: 22px;
+    background: #000;
 
+}
+aside .busqueda-comics h2{
+    margin-top: 10px;
+}
+aside .busqueda form{
+    display: flex;
+    /*flex-direction: row;*/
+    justify-content: space-between;
+    margin: 0px;
+    width: 100%;
+}
+aside .busqueda input{
+    width: 90%;
+}
+aside .busqueda button{
+    background: none;
+    border: none;
+}
+aside .busqueda i{
+    color:#fff;
+    font-size: 16px;
+}
+
+aside h2{
+    color:#fff;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 aside .contenedor-comics{
     padding: 22px;
     background: #000;
+
 }
 aside h2{
     color:#fff;
@@ -184,41 +333,10 @@ footer p{
     text-align: center;
 }
 /*Fin de footer*/
-/*Fin inicio de pagína*/
-
-/* Contenedor de About */
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-/* ESTILOS PARA CARDS */
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: 15px;
-    text-align: center;
-    float: left;
-
-}
-
-.title {
-    color: grey;
-    font-size: 18px;
-}
-
-button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
+/*pagina contacto*/
+.contacto{
+    background: #fff;
+    padding: 20px;
     width: 100%;
     font-size: 18px;
 }
@@ -233,7 +351,75 @@ button:hover, a:hover {
     opacity: 0.7;
 }
 
+/*ABOUT*/
+.contenedor-cartas{
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.about .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 30%;
+    margin: 15px;
+    text-align: center;
+    padding-bottom: 16px;
 
+}
+.about .card .white{
+    color:#000;
+}
+.about .card .redes a{
+    transition: all 0.25s ease;   
+
+}
+.about .card .redes a:hover{
+    color:steelblue;
+}
+.about .card .titulo-card{
+    font-size: 24px;
+    margin-top: 15px;
+}
+.about .card .parrafo-titulo {
+    color: grey;
+    font-size: 15px;
+}
+.about .card .uni{
+    font-family: "Roboto";
+    font-weight: 300;
+}
+.about .titulo-about{
+    text-align: center;
+    margin: 20px 0;
+    font-size: 34px;
+}
+.about .martin{
+    order:2;
+}
+.about .matt{
+    order:1;
+}
+.about .matias{
+    order:3;
+}
+.about .btn-contactar {
+    border-radius: 5px;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    margin: 10px 0;
+    border: 1px solid rgba(255,255,255,0);
+    border-radius: 5px;
+}
+.btn-contactar:hover{
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+}
+/*fin about*/
 /* On mouse-over, add a deeper shadow */
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -241,19 +427,22 @@ button:hover, a:hover {
 
 /* Add some padding inside the card container */
 .contenedor {
-	width: 100%;
-	background: rgba(255,255,255,1.00);
+    width: 100%;
+    background: rgba(255,255,255,1.00);
 }
-
-
-
+/*fin pagina contacto*/
+/*Fin inicio de pagína*/
 /* FORMULARIO */
-
+.contacto .titulo{
+    text-align: center;
+    font-size: 32px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 .my-3{
     margin-bottom:24px;
     margin-top:24px;
 }
-
 label {
     display:block;
     margin-top:20px;
@@ -268,19 +457,23 @@ label {
     border-radius: 5px;
 
 }
-
 form {
     margin:0 auto;
-    width:100%;
+    width:70%;
 }
-
+.formulario .titulo{
+    font-family: "Roboto",sans-serif;
+    text-align: center;
+    font-size: 32px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color:#000;
+}
 input, textarea {
-    /*width:380px;*/
-    float: left;
-    width: 95%;
+    width:100%;
     height:27px;
     background:#FFF;
-    border:2px solid violet;
+    border:2px solid rgba(153, 153, 255,0.5);
     border-radius: 5px;
     padding:20px;
     padding-left: 15px;
@@ -288,10 +481,32 @@ input, textarea {
     margin-bottom: 10px;
     color:darkblue;
     resize: vertical;
+
+}
+.contacto .btn{
+    margin: auto;
+    display: block;
+    padding: 0 16px ;
+    color:white;
+    font-size: 16px;
+    border: none;
+    background: #f6222b;
+}
+.contacto .btn:hover{
+    background: #9f1218;    
+    color:#fff;
+}
+.resenia{
+    padding:34px;
 }
 
 textarea {
     height:150px;
+    max-height: 400px;
+    min-height: 150px;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
 }
 
 .col-25{
@@ -312,10 +527,10 @@ textarea {
     width:85px;
     height:35px;
     border:none;
-    margin-top:5px;
+    margin-top:20px;
     cursor:pointer;
     margin-bottom: 20px;
-    background-color: #4CAF50;
+    background-color: dodgerblue;
     color:white;
     border-radius: 5px;
     padding: 10px;
@@ -323,17 +538,8 @@ textarea {
     margin-left: 35%;
     float:none;
 }
-
 .error{
     border:medium solid red;
-}
-
-/* Pie de pagina */
-footer{
-    background-color: darkslategrey;
-    color:white;
-    padding: 5px;
-
 }
 
 /* Slides */
@@ -346,19 +552,16 @@ footer{
 .rslides {
     margin: 0 auto 40px;
 }
-
 .centrar{
     display: flex;
     justify-content: center;
 }
-
 .slides_container {
     margin-bottom: 50px;
     position: relative;
     float: left;
     width: auto;
 }
-
 .slides {
     position: relative;
     list-style: none;
@@ -399,6 +602,7 @@ footer{
     padding: 10px 20px;
     margin: 0;
     max-width: none;
+    text-align: center;
 }
 
 .slides_nav {
@@ -491,16 +695,7 @@ footer{
         top: 0;
         width: 100%;
     }
-}
 
-
-
-@media screen and (min-width: 360px) {
-    .static {
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
 }
 @media screen and (max-width: 360px) {
     .navbar a {
@@ -517,17 +712,71 @@ footer{
         margin-left: 0px;
         margin-right: 0px;
     }
+    footer .autores{
+        flex-direction: column;
+        align-items: center;
 
+    }
+    footer .autores .autor{
+        margin-bottom: 10px;
+        margin-top:10px;
+    }
+    .main .articulo .contenido{ 
+        padding:0px;
+    }
+    .main .articulo .contenido p{ 
+        text-align: left;
+    }
+    .main .articulos{
+        padding: 10px;
+    }
+    .main .articulos article{
+        width: 100%;
+        margin: 20px 0;
+    }
+    .img-resenia{
+        width: 100%;
+    }
 
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 575.98px) {
+    .main .articulos{
+        flex-wrap: wrap;
+    }
+    /*    .main .articulos article{
+            width: 50%;
+            margin: 0 16px;
+        }*/
+
     .callbacks_nav {
         top: 47%;
     }
     .static{
         width: 100%;
     }
+
+    .main .articulo .contenido{
+        width: 100%;
+    }
+    .main .articulo .portada {
+        padding-right: 0px;
+        padding-left: 0px;
+        width: 100%;
+    }
+    .main .articulo .contenido .estado p{ 
+        text-align: left;
+    }
+    footer .autores{
+        flex-direction: column;
+        align-items: center;
+
+    }
+    footer .autores .autor{
+        margin-bottom: 10px;
+        margin-top:10px;
+    }
+
     input{
         width: 100%;
         margin-top: 0;
@@ -541,9 +790,15 @@ footer{
         width: 100%;
         margin-top: 0;
     }
+    .img-resenia{
+        width: 100%;
+    }
+    .about .contenedor-cartas .card{
+        width: 100%;
+    }
 }
 
-@media (max-width: 575.98px) {}
+
 @media (max-width: 767.98px) {
     .main {
         width: 100%;
@@ -556,9 +811,60 @@ footer{
         width: 100%;
         flex-direction: row;
     }
+    .main .articulo .portada {
+        padding: 0px;
+        width: 100%;
+    }
+    .main .articulo .portada {
+        padding-right: 0px;
+        padding-left: 0px;
+        width: 100%;
+    }
+    .main .articulo .contenido{ 
+        padding:0px;
+        width: 100%;
+    }
+
+    .main .articulo .contenido p{ 
+        text-align: left;
+    }
+    .main .articulo .contenido .titulo-portada{
+        text-align: center;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
+    .about .contenedor-cartas .card{
+        width: 50%;
+    }
+}
+@media (max-width:578px){
+    aside{
+        width: 100%;
+        height: auto;
+    }
+    .main{
+        width: 100%;
+    }
+    .navbar{
+        width: 100%;
+    }
+    .about .contenedor-cartas{
+        flex-wrap: wrap;
+        padding: 0px;
+        flex-direction: row;
+    }
+    .about .contenedor-cartas .card{
+        margin: 0px;
+        padding: 0px;
+        width: 100%;
+    }
 
 }
+@media (max-width: 991.98px) {
+    .main .articulo .portada{
+        padding: 0;
+    }
 
-@media (max-width: 991.98px) {}
+}
 
 @media (max-width: 1199.98px) {}
